<resources>
    <string name="app_name">Alumni</string>

    <string name="login_titulo">Loyola Alumni</string>
    <string name="login_subtitulo">Red de antiguos alumnos</string>
    <string name="login_usuario">Usuario</string>
    <string name="login_contrasenia">Contrasena</string>
    <string name="login_entrar">Iniciar sesion</string>
    <string name="login_demo_titulo">Accesos de prueba (Loyola2026!)</string>
    <string name="login_demo_alumni">Alumni</string>
    <string name="login_demo_pdi">PDI</string>
    <string name="login_demo_ptgas">PTGAS</string>
    <string name="login_demo_admin">Admin</string>
    <string name="login_credenciales_obligatorias">Indica usuario y contrasena</string>
    <string name="login_error_conexion">Fallo de conexion: %1$s</string>

    <string name="home_bienvenido">Hola, %1$s</string>
    <string name="home_rol">Rol: %1$s</string>
    <string name="home_cerrar_sesion">Cerrar sesion</string>

    <string name="menu_directorio">Directorio de alumni</string>
    <string name="menu_mi_perfil">Mi perfil</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_actividades">Actividades</string>
    <string name="menu_mis_inscripciones">Mis inscripciones</string>
    <string name="menu_proponer_evento">Proponer iniciativa</string>
    <string name="menu_proponer_iniciativa">Proponer iniciativa</string>
    <string name="menu_propuestas">Propuestas pendientes</string>
    <string name="menu_admin_panel">Panel administrador</string>

    <string name="buscar_hint">Buscar alumni…</string>
    <string name="filtros_avanzados">Filtros avanzados</string>
    <string name="filtros_limpiar">Limpiar</string>
    <string name="filtros_aplicar">Aplicar</string>
    <string name="sin_resultados">Sin resultados</string>

    <string name="guardar_cambios">Guardar cambios</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="cancelar_inscripcion">Cancelar inscripcion</string>
    <string name="publicar_evento">Publicar iniciativa</string>
    <string name="enviar_propuesta">Enviar propuesta</string>
    <string name="contactar">Contactar</string>

    <!-- Admin: gestion de usuarios -->
    <string name="admin_titulo">Gestion de usuarios</string>
    <string name="admin_subtitulo">Crea, modifica y elimina cuentas de la comunidad Alumni.</string>
    <string name="admin_actualizar">Actualizar</string>
    <string name="admin_crear_usuario">Crear usuario</string>
    <string name="admin_editar_usuario">Editar usuario</string>
    <string name="admin_guardar_usuario">Guardar usuario</string>
    <string name="admin_limpiar">Limpiar</string>
    <string name="admin_editar">Editar</string>
    <string name="admin_eliminar">Eliminar</string>
    <string name="aprobar">Aprobar</string>
    <string name="rechazar">Rechazar</string>
    <string name="publicar">Publicar</string>
</resources>
